--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main>
   <div class="container">
     <div class="text-container">
-    <div class="img"><img src="../images/image-header-desktop.jpg" alt=""></div>
+    <div class="img"><img src="./images/image-header-desktop.jpg" alt=""></div>
     <div class="heading">
       <h1>Get <span>insights</span>  that help your business grow.</h1>
       <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
